tests/error/err-uninit-vars-0.scm
(letrec*
  ([a b][b 42])
  a)
